@@ -1,3 +1,7 @@
+Mon Mar  9 06:43:21 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_insnhelper.c (lep_svar_set): add WBs.
+
 Mon Mar  9 06:19:06 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* internal.h: define rb_cref_t and change to use it.
